    an installation normally easier). The data bases are put in
    a directory different from the program, therefore not deleted when
    the program is uninstalled, and can be directly usable if another
    version is installed.

* Languages
  - [27 Feb 01] Added Polish (Sebastian Tuszynski)
  - [11 Feb 01] Added Catalan (Jaume Ramisa Elias)

* GeneWeb server or CGI (gwd)
  - [28 Feb 01] In surname displaying, if several surnames match,
    everybody is displayed with his/her surname. Previously, the surname
    of the people having the first surname of the list was not displayed.
  - [24 Feb 01] Fixed big bug in Windows version: if the GeneWeb
    directory was installed in a directory which contained one or several
    spaces (e.g. C:/Program Files), and if the server "gwd" was used
    in a shortcut or in a batch file, it did not work! (this bug was due
    to a problem in a library for Windows in my favorite programming
    language).
  - [16 Feb 01] Fixed problem: when displaying a surname, if there were
    several answers, the link for displaying the first names by alphabetical
    order showed only the first surname.
  - [16 Feb 01] Fixed bug: when displaying the tree of all persons
    having the same nobility title, if there is no relationship links
    between them, the request failed.
  - [15 Feb 01] In forum, propose now "previous message" and "next message",
    instead of just "next message".
  - [11 Feb 01] Fixed a (small) bug: in the ancestors page, if the maximum
    number of generations was the authorized limit plus one, the message
    "maximum # generations" did not appear.
  - [10 Feb 01] In family update form, added button "no sexes check"
    allowing 1/ to create gay marriages 2/ to fix parents sex inversion
    without having to delete the marriage.

* Templates files (etc/*.txt)
  For programmers...
  - [02 Mar 01] For the perso.txt template file, added the variables
    %length; (family size in a %foreach;family;) and %count; (child